--- a/trunk/ClassMS/WebRoot/content/images/main.css
+++ b/trunk/ClassMS/WebRoot/content/images/main.css
@@ -1,9 +1,9 @@
-*{margin:0;padding:0;}
+﻿*{margin:0;padding:0;}
 
 #header{height:50px;background:#eee;}
 
-#content{height:600px;}
+#content{ background:#ccc;}
 
-#sidebar{ float:left; width:200px; background:#ccc;}
-#main{float:left; height: 100%;}
-#frame{width:100%;height:100%;}
+#sidebar{ float:left; width:200px;}
+#main{margin-left:200px; height:500px; background:#FFF;}
+#frame{width:100%;height:100%; border:none;}
