--- a/trunk/ClassMS/WebRoot/content/images/main.css
+++ b/trunk/ClassMS/WebRoot/content/images/main.css
@@ -1,9 +1,11 @@
 ﻿*{margin:0;padding:0;}
+html,body{ height:100%; }
+
 
 #header{height:50px;background:#eee;}
 
-#content{ background:#ccc;}
+#content{ background:#ccc; height:100%;}
 
 #sidebar{ float:left; width:200px;}
-#main{margin-left:200px; height:500px; background:#FFF;}
+#main{margin-left:200px; height:100%; background:#FFF;}
 #frame{width:100%;height:100%; border:none;}
