--- a/ClassMS/WebRoot/content/images/main.css
+++ b/ClassMS/WebRoot/content/images/main.css
@@ -1,11 +1,28 @@
 ﻿*{margin:0;padding:0;}
-html,body{ height:100%; }
+body{ font-family:Arial, Helvetica, sans-serif; font-size:12px;}
+ul{ list-style:none;}
+a:link,a:visited{ color:#000; text-decoration:none;}
+a:hover{ color:#0CF}
 
+#container{ height:100%; width:100%;}
+#header{height:97px;background:url(header_bg.png) repeat-x; position:relative; }
+#header_tool{ position:absolute; left:200px; top:65px;}
+#header_right{ width:281px; height:97px; position:absolute; right:0; top:0; background:url(header_right.jpg) no-repeat;}
+#header_user { position:absolute; right:10px; top:35px;}
+#header_datetime{ position:absolute; right:24px; top:68px; color:#FFF;}
+#header_toolbar{position:relative; height:29px; background:url(header_menubg.png) repeat-x;}
+#header_toolbar_menu{ background:url(header_menu.png) no-repeat; height:29px; width:165px;}
+#header_toolbar_right{ background:url(header_menu_right.png) no-repeat; height:29px; width:13px; position:absolute; right:0px; top:0px;}
+#header_toolbar_content{ position:absolute; top:5px; left:200px;}
 
-#header{height:50px;background:#eee;}
+#sidebar_body{ background:url(sidebar_bg.jpg) repeat-y;}
+#sidebar{ padding:0 8px;width:147px;}
+.menu{ background:url(sidebar_menu.jpg) no-repeat; width:147px; height:23px; line-height:23px; text-align:center; font-size:14px; }
+#sidebar ul{ margin:8px;}
+#sidebar li{ font-size:14px; line-height:170%;}
 
-#content{ background:#ccc; height:100%;}
+#content{ background:#ccc;}
 
-#sidebar{ float:left; width:200px;}
-#main{margin-left:200px; height:100%; background:#FFF;}
-#frame{width:100%;height:100%; border:none;}
+#bottom{ position:relative; background:url(bottom_bg.png) repeat-x; height:21px; overflow:hidden; }
+#bottom_left{ background:url(bottom_left.png) no-repeat; position:absolute; left:0; top:0; width:165px; height:11px;}
+#bottom_right{ background:url(botton_right.png) no-repeat;position:absolute; right:0; top:0;width:13px; height:11px;}
