--- a/trunk/ClassMS/WebRoot/content/images/content.css
+++ b/trunk/ClassMS/WebRoot/content/images/content.css
@@ -1,10 +1,20 @@
 ﻿@charset "utf-8";
 *{ margin:0; padding:0;}
 body{ padding:3px;}
+a:link,a:visited{ color:#369; text-decoration:none;}
+a:hover{ color:#F93;}
+a.btn:link,a.btn:visited{ color:#FFF; font-weight:normal;}
 
-.caption { background:#353c44; font-size:14px; color:#FFF; padding:5px; margin-bottom:3px;}
+.caption { background:#353c44 url(tb.gif) 5px 6px no-repeat; color:#ccc; font-size:14px; color:#FFF; padding:5px 5px 5px 25px; margin-bottom:3px;}
 
-.table{ width:100%; border-collapse:collapse;}
+.float_right{ float:right;}
+.btn_add{ background:url(add.gif) 5px 2px no-repeat; padding-left:20px; margin-right:10px;}
+.btn_del{ background:url(del.gif) 5px 2px no-repeat; padding-left:20px;margin-right:10px;}
+.btn_edit{ background:url(edit.gif) 5px 2px no-repeat; padding-left:20px;margin-right:10px;}
+
+.table{ width:100%; border-collapse:collapse; color:#353c44; margin-bottom:10px;}
 .table th{ background:#b9dbe2;}
 .table td,.table th{ border:1px solid #a8c7ce; text-align:center; padding:5px;}
+.trhover{ background:#d5f4fe;}
+.trselected{ background:#FAF8C5;}
 
