--- a/ClassMS/WebRoot/content/images/main.css
+++ b/ClassMS/WebRoot/content/images/main.css
@@ -26,9 +26,17 @@ a:hover{ color:#0CF}
 #header_toolbar_content{ position:absolute; top:8px; right:50px; padding-left:10px; background:url(sj.gif) left center no-repeat;}
 
 #sidebar{width:147px;}
-.menu{ background:url(sidebar_menu.jpg) no-repeat; color:#353c44; width:147px; height:23px; line-height:23px; text-align:center; font-size:14px; }
-#sidebar ul{ margin:8px;}
-#sidebar li{ font-size:14px; line-height:170%; background:url(tb.gif) 0 3px no-repeat; padding-left:20px;}
+.menu{ background:url(sidebar_menu.jpg) no-repeat; color:#294569; width:147px; height:23px; line-height:23px; text-align:center; font-size:14px; cursor:pointer; }
+#sidebar ul{ margin:8px 0 8px 5px;}
+#sidebar li{ font-size:14px; line-height:170%; padding-left:25px;}
+
+#sidebar a:link,#sidebar a:visited{ color:#265395; padding:2px;}
+#sidebar a:hover{ color:#fff; background:#353c44; padding:2px;}
+#sidebar .icon1{ background: url(icon1.gif) 3px 4px no-repeat;}
+#sidebar .icon2{ background: url(icon2.gif) 3px 4px no-repeat;}
+#sidebar .icon3{ background: url(icon3.gif) 3px 4px no-repeat;}
+#sidebar .icon4{ background: url(icon4.gif) 3px 4px no-repeat;}
+#sidebar .icon5{ background: url(icon5.gif) 3px 4px no-repeat;}
 
 #center_sidebar{ width:147px; height:100%; padding:0px 10px 0px 8px; background:url(sidebar_bg.jpg) repeat-y;}
 #center_content{ height:100%; padding-right:8px; background:url(right_bg.png) right repeat-y;}
